BotProcess fixes